@@ -1,3 +1,7 @@
+1998-06-17  Christian Esken  <esken@kde.org>
+
+	* ADDING MdDisconnect(). *BSD users should be much happier now.
+
 1998-06-13  Christian Esken  <esken@kde.org>
 
 	* Adding new file selector
